--- a/README.Rmd
+++ b/README.Rmd
@@ -41,15 +41,15 @@ url_unikn_github <- "https://github.com/hneth/unikn"
 ```
 
 <!-- Devel badges start: -->
-[![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol)
-[![Downloads/month](https://cranlogs.r-pkg.org/badges/unicol)](https://www.r-pkg.org/pkg/unicol)
-[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8252106.svg)](https://doi.org/10.5281/zenodo.8252106)
+<!-- [![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol) -->
+<!-- [![Downloads/month](https://cranlogs.r-pkg.org/badges/unicol)](https://www.r-pkg.org/pkg/unicol) -->
+<!-- [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8252106.svg)](https://doi.org/10.5281/zenodo.8252106) -->
 <!-- Devel badges end. -->
 
 <!-- Release badges start: -->
-<!-- [![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol) -->
-<!-- [![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unicol)](https://www.r-pkg.org/pkg/unicol) -->
-<!-- [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8252106.svg)](https://doi.org/10.5281/zenodo.8252106) -->
+[![CRAN status](https://www.r-pkg.org/badges/version/unicol)](https://CRAN.R-project.org/package=unicol)
+[![Total downloads](https://cranlogs.r-pkg.org/badges/grand-total/unicol)](https://www.r-pkg.org/pkg/unicol)
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8252106.svg)](https://doi.org/10.5281/zenodo.8252106)
 <!-- Release badges end. -->
 
 <!-- ALL badges start: -->
@@ -453,10 +453,10 @@ To support our efforts, please cite the **unicol** package in your derivations o
 
 <!-- Citation / reference (in APA format): -->
 
-- Neth, H. et al. (2023). 
+- Neth, H. et al. (2024). 
 unicol: The colors of your university.  
 Social Psychology and Decision Sciences, University of Konstanz, Germany.  
-Computer software (R package version 0.2.0, September 15, 2023).  
+Computer software (R package version 0.3.0, May 1, 2024).  
 Retrieved from <https://CRAN.R-project.org/package=unicol>.  
 doi\ [10.5281/zenodo.8252106](https://doi.org/10.5281/zenodo.8252106) 
 
