--- a/vignettes/color_pals.Rmd
+++ b/vignettes/color_pals.Rmd
@@ -106,17 +106,23 @@ knitr::kable(all_pals_df, caption = tab_caption, row.names = TRUE)
 ```{r source-util-funs, echo = FALSE}
 # 1. Utility functions: ------
 
-# Current path propoerties:
+# Current path properties:
 wd    <- getwd()
 nc_wd <- nchar(wd)
 # nchar("vignettes") # = 9 
 fin_chars <- substr(wd, nc_wd - 8, nc_wd)  # final 9 characters
 
-if (fin_chars == "vignettes"){
-  source("../R/5_util.R")  # from pkg/vignettes dir  
-} else {
-  source("./R/5_util.R")   # from pkg wd
-}
+# Source utility file:
+
+# # (a) flexibly:
+# if (fin_chars == "vignettes"){
+#   source("../R/5_util.R")  # from pkg/vignettes dir  
+# } else {
+#   source("./R/5_util.R")   # from pkg wd
+# }
+
+# (b) during pkg install:
+source("./R/5_util.R")   # from pkg wd
 ```
 
 ```{r unicol-data-table, echo = FALSE}
